--- a/UART_HAL/ReadMe
+++ b/UART_HAL/ReadMe
@@ -1,3 +1,4 @@
+Datasheet : https://www.st.com/resource/en/datasheet/stm32f446mc.pdf
 What was done:
 
 1. Created the project template using the CubeMX 
